added navbar shadow

--- a/app/views/users/_navbar.html.slim
+++ b/app/views/users/_navbar.html.slim
@@ -1,4 +1,4 @@
-nav.nav.navbar-default
+nav.navbar.navbar-default.nav-header
   ul.nav.navbar-nav.navbar-right
     li.dropdown
       a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" 
