--- a/app/assets/stylesheets/application/bootstrap/_navbar.scss
+++ b/app/assets/stylesheets/application/bootstrap/_navbar.scss
@@ -1,4 +1,9 @@
 nav.navbar {
+  -webkit-border-radius: 0;
+  -ms-border-radius: 0;
+  border-radius: 0;
+  border: none;
+
   & .navbar-header {
     & .navbar-brand {
       width: 100%;
