--- a/app/views/application/_sidebar.html.slim
+++ b/app/views/application/_sidebar.html.slim
@@ -15,9 +15,9 @@
       .collapse.navbar-collapse#bs-example-navbar-collapse-1
         ul.nav.navbar-nav
           li
-            = link_to fa_icon('camera-retro', text: 'Enrollment'), enrollment_path
+            = link_to fa_icon('camera-retro', text: 'Enrollment'), enrollments_path
           li            
-            = link_to fa_icon('camera', text: 'My Schedule'), my_schedule_path
+            = link_to fa_icon('camera', text: 'My Schedule'), my_schedules_path
         
         / ul.nav.navbar-nav.navbar-right
           / li = current_user.email
